# VTK_split

./: .gitignore  CMakeLists.txt  README.md  main.cpp
compress/: Compressor.h  CompressorMGARD.h  CompressorMGARD_nonCLI.h  CompressorSZ.h  CompressorZFP.h
data_split/: DataMerge.h  DataSplit.h  DataSpliter.h  IsosurfaceExtractor.h
extractor/: IsosurfaceExtractor.h
preprocess/: dataPreprocess.h
resolution/: HighResolution.h  LowResolution.h
test/: mgardexecutable.cu  szexecutable.cu  test_compression_mgard.cpp  test_compression_mgard.cu  test_compression_sz.cpp  test_compression_sz.cu  test_compression_zfp.cpp  test_compression_zfp.cu  test_extractor.cu  test_non_split_visual.cu  test_resolution.cpp  test_split.cpp  test_split.cu  test_split_comp_mgard.cu  test_split_comp_sz.cu  test_split_comp_zfp.cu  test_split_visual.cu  test_visualization.cu  zfpexecutable.cu
utils/: DataReader.h
